// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharRange <- #constructor() 1`] = `
CharRange {
  "source": Numbers {
    "end": 97,
    "start": 99,
    "state": 99,
    "step": -1,
  },
}
`;

exports[`CharRange <- #constructor() 2`] = `
CharRange {
  "source": Numbers {
    "end": 1114111,
    "start": 0,
    "state": 0,
    "step": 1,
  },
}
`;

exports[`CharRange <- #drop() 1`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`CharRange <- #drop() 2`] = `
CharRange {
  "source": Numbers {
    "done": true,
    "end": 0,
    "start": 0,
    "state": 0,
    "step": 0,
  },
}
`;

exports[`CharRange <- #next() 1`] = `
Object {
  "done": false,
  "value": "c",
}
`;

exports[`CharRange <- #next() 2`] = `
Object {
  "done": false,
  "value": "b",
}
`;

exports[`CharRange <- #next() 3`] = `
Object {
  "done": false,
  "value": "a",
}
`;

exports[`CharRange <- #next() 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`CharRange -> #drop() 1`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`CharRange -> #drop() 2`] = `
CharRange {
  "source": Numbers {
    "done": true,
    "end": 0,
    "start": 0,
    "state": 0,
    "step": 0,
  },
}
`;

exports[`CharRange -> #next() 1`] = `
Object {
  "done": false,
  "value": "a",
}
`;

exports[`CharRange -> #next() 2`] = `
Object {
  "done": false,
  "value": "b",
}
`;

exports[`CharRange -> #next() 3`] = `
Object {
  "done": false,
  "value": "c",
}
`;

exports[`CharRange -> #next() 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`NumberRange <- #constructor() 1`] = `
Numbers {
  "end": 1,
  "start": 3,
  "state": 3,
  "step": -1,
}
`;

exports[`NumberRange <- #constructor() 2`] = `
Numbers {
  "end": 1,
  "start": 9007199254740991,
  "state": 9007199254740991,
  "step": -1,
}
`;

exports[`NumberRange <- #drop() 1`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`NumberRange <- #drop() 2`] = `
Numbers {
  "done": true,
  "end": 0,
  "start": 0,
  "state": 0,
  "step": 0,
}
`;

exports[`NumberRange <- #next() 1`] = `
Object {
  "done": false,
  "value": 3,
}
`;

exports[`NumberRange <- #next() 2`] = `
Object {
  "done": false,
  "value": 2,
}
`;

exports[`NumberRange <- #next() 3`] = `
Object {
  "done": false,
  "value": 1,
}
`;

exports[`NumberRange <- #next() 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`NumberRange -> #constructor() 1`] = `
Numbers {
  "end": 9007199254740991,
  "start": 0,
  "state": 0,
  "step": 1,
}
`;

exports[`NumberRange -> #constructor() 2`] = `
Numbers {
  "end": 9007199254740991,
  "start": 1,
  "state": 1,
  "step": 1,
}
`;

exports[`NumberRange -> #constructor() 3`] = `
Numbers {
  "end": 3,
  "start": 1,
  "state": 1,
  "step": 1,
}
`;

exports[`NumberRange -> #constructor() 4`] = `
Numbers {
  "end": 9007199254740991,
  "start": 1,
  "state": 1,
  "step": 1,
}
`;

exports[`NumberRange -> #constructor() 5`] = `
Numbers {
  "done": true,
  "end": 0,
  "start": 0,
  "state": 0,
  "step": 0,
}
`;

exports[`NumberRange -> #drop() 1`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`NumberRange -> #drop() 2`] = `
Numbers {
  "done": true,
  "end": 0,
  "start": 0,
  "state": 0,
  "step": 0,
}
`;

exports[`NumberRange -> #next() 1`] = `
Object {
  "done": false,
  "value": 1,
}
`;

exports[`NumberRange -> #next() 2`] = `
Object {
  "done": false,
  "value": 2,
}
`;

exports[`NumberRange -> #next() 3`] = `
Object {
  "done": false,
  "value": 3,
}
`;

exports[`NumberRange -> #next() 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;
